kube/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rmc-postgres
  namespace: ratemycourses
spec:
  selector:
    matchLabels:
      app: rmc-postgres
  serviceName: rmc-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: rmc-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rmc-postgres
  namespace: ratemycourses
spec:
  ports:
    - port: 5432
  selector:
    app: rmc-postgres
