kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmc-ingress
  namespace: ratemycourses
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ratemycourses.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rmc-nextjs
                port:
                  number: 3000
